--- a/src/components/List/Item.module.css
+++ b/src/components/List/Item.module.css
@@ -8,6 +8,7 @@
   
     padding: 1rem;
     border-radius: 8px;
+    margin-top: 2rem;
   
     background-color: var(--gray-500);
     border: 1px solid var(--gray-400);
