--- a/src/App.module.css
+++ b/src/App.module.css
@@ -62,11 +62,12 @@
   }
   
   .checkbox:checked::after {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%; 
+    content: "✔";
+    font-size: 12px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center; 
   }
   
   .taskText {
